<resources>
    <string name="app_name">MenusEx</string>
    <string name="tvhint">點擊目錄按鈕</string>
    <string name="mlb">MLB大聯盟</string>
    <string name="american">美國聯盟</string>
    <string name="national">國家聯盟</string>
    <string name="cpbl">中華職棒</string>
    <string name="pbl">日本職棒</string>
    <string name="clear">清除</string>
    <string name="background">背景色</string>
    <string name="yellow">黃色</string>
    <string name="green">綠色</string>
    <string name="red">紅色</string>
    <string name="exit">離開</string>
    <string name="btndelete">刪除</string>
    <string name="deleteItem">刪除選擇項目</string>
    <string name="deleteAll">刪除所有項目</string>

</resources>
